--- a/artigo001.html
+++ b/artigo001.html
@@ -30,10 +30,10 @@
         <div class="topContainer">
             <p>Outros artigos:</p>
             <ul>
-                <li class="visited"><a href="">Leis da Termodinâmica</a></li>
-                <li><a href="">Gás Perfeito</a></li>
-                <li><a href="">Princípio e máquina de Carnot</a></li>
-                <li><a href="">Máquinas térmicas</a></li>
+                <li class="visited"><a href="artigo001.html">Leis da Termodinâmica</a></li>
+                <li><a href="artigo002.html">Gás Perfeito</a></li>
+                <li><a href="artigo003.html">Princípio e máquina de Carnot</a></li>
+                <li><a href="artigo004.html">Máquinas térmicas</a></li>
             </ul>
         </div>
     </nav>
@@ -46,6 +46,7 @@
                     <li><a href="#conceitos">Conceitos</a></li>
                     <li><a href="#primeira-lei">Primeira Lei</a></li>
                     <li><a href="#segunda-lei">Segunda Lei</a></li>
+                    <li><a href="#terceira-lei">Terceira Lei</a></li>
                 </ul>
             </div>
             <p>
@@ -119,33 +120,45 @@
                     sistema.
                 </p>
                 <li>Lei 0</li>
-                <p>
-                    Serve como base para a construção dos termômetros.
 
+                <p>Serve como base para a construção dos termômetros.</p>
+
+                <p>
                     Estabelece que dois sistemas em equilíbrio térmico com um terceiro estão em equilíbrio térmico entre
                     si.
+                </p>
 
+                <p>
                     Justifica o conceito de Temperatura como sendo a propriedade que sendo igual para dois sistemas
                     mostra que estão em equilíbrio térmico.
+                </p>
 
+                <p>
                     Em termos mais práticos, para sabermos se dois sistemas possuem a mesma temperatura não é necessário
                     coloca-los em contato térmico entre si, basta verificar se os dois estão em equilíbrio térmico
                     através de um terceiro corpo, o termômetro.
+                </p>
 
+                <p>
                     Esses dois sistemas diferentes foram colocados em contato com no outro através de uma parede imóvel,
                     impermeável a passagem de material, mas que permite ainda a passagem de energia por calor. Quando as
                     propriedades dos sistemas deixam de variar, eles alcançam o equilíbrio térmico.
+                </p>
 
+                <p>
                     Consideremos que o sistema A está em equilíbrio térmico com o termômetro, ele indica a temperatura
                     TA e quando o sistema B está em equilíbrio com o termômetro, se indica a temperatura TB. Então se TA
                     = TB, os sistemas A e B estão em equilíbrio térmico entre si.
-                    <img src="imagens/artigo001/lei-0.png" alt="Lei 0">
                 </p>
+                <img class="imagens" src="imagens/artigo001/lei-0.png" alt="Lei 0">
+
                 <h4>Lei do 0: história</h4>
+                <img src="imagens/artigo001/ralph.jpg" alt="Ralph H. Flower" style="float: right; margin: 10px;">
                 <p>
                     A lei zero da termodinâmica ganhou esta denominação por causa de Ralph H. Fowler (1889- 1944), um
                     físico inglês. Após estudos e experiências, chegou ao postulado no século XX.
                 </p>
+                
                 <p>
                     Apesar de ter formulado a base do conhecimento que envolve as trocas de calor entre os corpos,
                     existiu a necessidade de estruturar a apresentação da lei na termodinâmica, pois a primeira e a
@@ -224,7 +237,9 @@
                     ΔU = Q – W
                 </strong>
             </p>
-            Esta lei representa a aplicação do princípio de conservação da energia a sistemas termodinâmicos.
+            <p>
+                Esta lei representa a aplicação do princípio de conservação da energia a sistemas termodinâmicos.
+            </p>
             </p>
             <p>
                 W representa a quantidade de energia transferida do sistema para a vizinhança por trabalho
@@ -233,98 +248,179 @@
                 Q representa a quantidade de energia transferida da vizinhança para o sistema por calor. Por isso:
             </p>
             <p>
-                W > 0: o sistema se expande e perde energia para a vizinhança.
+                <strong>W > 0: o sistema se expande e perde energia para a vizinhança.</strong>
             </p>
             <p>
-                W < 0: o sistema se contrai e recebe energia da vizinhança. </p>
-                    <p>
-                        Q > 0: a energia por calor passa da vizinhança para o sistema.
-                    </p>
-                    <p>
-                        Q < 0: a energia por calor passa do sistema para a vizinhança. </p>
-                            <p>
-                                Embora ΔU só dependa do estado inicial e do estado final do sistema, porque representa a
-                                variação da sua energia interna, as quantidades de energia W e Q dependem, também, do
-                                processo que leva o sistema do estado inicial ao estado final.
-                            </p>
-                            <p>
-                                Para discutir essa propriedade importante da energia interna vamos considerar uma
-                                amostra de gás que é levada do estado 1 para o estado 2 por três processos diferentes.
-                            </p>
-                            <p>
-                                <strong>IMAGEM</strong>
-                            </p>
-                            <h4>Primeira Lei: história</h4>
-                            <p>
-                                <strong>IMAGEM</strong>
-                            </p>
-                            <p>
-                                A primeira lei da termodinâmica foi anunciada por Julius Robert von Mayer em 1841. Mayer
-                                foi a primeira a verificar a transformação do trabalho mecânico em calor e vice-versa.
-                            </p>
-                            <p>
-                                Essas verificações foram feitas ao mesmo tempo que Joule, mas separadamente. Ambos no
-                                século XIX.
-                            </p>
-                            <p>
-                                As primeiras declarações completas da lei vieram em 1850 de Rudolf Clausius e William
-                                Rankine. A afirmação de Rankine é considerada menos diferente da de Clausius.
-                            </p>
-                            <p>
-                                <strong>
-                                    IMAGENS
-                                </strong>
-                            </p>
-                            <h3 id="segunda-lei">Segunda Lei</h3>
-                            <p>
-                                Dentre as duas leis da termodinâmica, a segunda é a que tem maior aplicação na
-                                construção de máquinas e utilização na indústria, pois trata diretamente do rendimento
-                                das máquinas térmicas.
-                            </p>
-                            <p>
-                                Dois enunciados, aparentemente diferentes ilustram a 2ª Lei da Termodinâmica, os
-                                enunciados de Clausius e Kelvin-Planck:
-                            </p>
-                            <ul>
-                                <li>Enunciado de Clausius:</li>
-                                <p>
-                                    O calor não pode fluir, de forma espontânea, de um corpo de temperatura menor, para
-                                    um outro corpo de temperatura mais alta.
-                                </p>
-                                <p>
-                                    Tendo como consequência que o sentido natural do fluxo de calor é da temperatura
-                                    mais alta para a mais baixa, e que para que o fluxo seja inverso é necessário que um
-                                    agente externo realize um trabalho sobre este sistema.
-                                </p>
-                                <li>Enunciado de Kelvin-Planck</li>
-                                <p>
-                                    <q>
-                                        É impossível a construção de uma máquina que, operando em um ciclo termodinâmico,
-                                        converta toda a quantidade de calor recebido em trabalho.
-                                    </q>
-                                </p>
-                                <p>
-                                    Este enunciado implica que, não é possível que um dispositivo térmico tenha um
-                                    rendimento de 100%, ou seja, por menor que seja, sempre há uma quantidade de calor
-                                    que
-                                    não se transforma em trabalho efetivo.
-                                </p>
-                                <p>
-                                    <q>
-                                        É impossível construir uma máquina que, operando em ciclos termodinâmicos, tenha
-                                        como
-                                        único efeito converter integralmente em trabalho todo o calor recebido.
-                                    </q>
-                                </p>
-                                <P>
-                                    Esse enunciado nos diz que nenhuma máquina térmica é capaz de transformar em
-                                    trabalho
-                                    todo o calor que recebe.
-                                </P>
-                            </ul>
+                <strong>W < 0: o sistema se contrai e recebe energia da vizinhança.</strong>
+            </p>
+            <p>
+                <strong>Q > 0: a energia por calor passa da vizinhança para o sistema.</strong>
+            </p>
+            <p>
+                <strong>Q < 0: a energia por calor passa do sistema para a vizinhança.</strong>
+            </p>
+            <p>
+                Embora ΔU só dependa do estado inicial e do estado final do sistema, porque representa a
+                variação da sua energia interna, as quantidades de energia W e Q dependem, também, do
+                processo que leva o sistema do estado inicial ao estado final.
+            </p>
+            <p>
+                Para discutir essa propriedade importante da energia interna vamos considerar uma
+                amostra de gás que é levada do estado 1 para o estado 2 por três processos diferentes.
+            </p>
+            <img class="imagens" src="imagens/artigo001/grandezas.png" alt="1° Lei da Termodinâmica" style="border: 1px solid black">
+
+            <h4>Primeira Lei: história</h4>
+            <p>
+                A primeira lei da termodinâmica foi anunciada por Julius Robert von Mayer em 1841. Mayer
+                foi a primeira a verificar a transformação do trabalho mecânico em calor e vice-versa.
+            </p>
+            <p>
+                Essas verificações foram feitas ao mesmo tempo que Joule, mas separadamente. Ambos no
+                século XIX.
+            </p>
+            <p>
+                As primeiras declarações completas da lei vieram em 1850 de Rudolf Clausius e William
+                Rankine. A afirmação de Rankine é considerada menos diferente da de Clausius.
+            </p>
+            <img src="imagens/artigo001/joule.jpg" alt="Joule" style="margin: 5px;">
+            <img src="imagens/artigo001/rankine.jpg" alt="Willuam Rankine" style="margin: 5px;">
+            <img src="imagens/artigo001/rudolf.webp" alt="Rudoulf Clausius" style="margin: 5px;">
+            <h3 id="segunda-lei">Segunda Lei</h3>
+            <p>
+                Dentre as duas leis da termodinâmica, a segunda é a que tem maior aplicação na
+                construção de máquinas e utilização na indústria, pois trata diretamente do rendimento
+                das máquinas térmicas.
+            </p>
+            <p>
+                Dois enunciados, aparentemente diferentes ilustram a 2ª Lei da Termodinâmica, os
+                enunciados de Clausius e Kelvin-Planck:
+            </p>
+            <ul>
+                <li>Enunciado de Clausius:</li>
+                <p>
+                    O calor não pode fluir, de forma espontânea, de um corpo de temperatura menor, para
+                    um outro corpo de temperatura mais alta.
+                </p>
+                <p>
+                    Tendo como consequência que o sentido natural do fluxo de calor é da temperatura
+                    mais alta para a mais baixa, e que para que o fluxo seja inverso é necessário que um
+                    agente externo realize um trabalho sobre este sistema.
+                </p>
+                <li>Enunciado de Kelvin-Planck</li>
+                <p>
+                    <q>
+                        É impossível a construção de uma máquina que, operando em um ciclo
+                        termodinâmico,
+                        converta toda a quantidade de calor recebido em trabalho.
+                    </q>
+                </p>
+                <p>
+                    Esse enunciado nos diz que nenhuma máquina térmica é capaz de transformar em
+                    trabalho
+                    todo o calor que recebe.
+                </p>
+            </ul>
+            <h3 id="terceira-lei">Terceira Lei</h3>
+            <p>
+                A Terceira lei da Termodinâmica sustenta a ideia de que a entropia de um sistema com temperatura igual a
+                zero absoluto tem uma constante pouco variável. A teoria explica que quanto mais próximo da temperatura
+                de zero absoluto um sistema estiver, mais a entropia se aproximará de zero. A entropia se tornará
+                absoluta também.
+            </p>
+            <p>
+                Para entender melhor essa definição é preciso se apropriar do conceito de entropia.
+            </p>
+            <ul>
+                <li>Entropia</li>
+                <p>
+                    A entropia se desenvolveu junto com os estudos das Leis da Termodinâmica. De acordo com as
+                    definições da termodinâmica, a energia pode ser transportada de um sistema para o outro em forma de
+                    calor ou trabalho.
+                </p>
+                <p>
+                    <strong>
+                        A entropia pode ser definida da seguinte forma: a maneira em que as moléculas estão organizadas
+                        dentro de um sistema.
+                    </strong>
+                </p>
+                <p>
+                    A entropia é uma medida termodinâmica que calcula o nível de irreversibilidade de um conjunto. Sendo
+                    que esse conjunto se encontra em desordem. Essa desordem caracteriza por movimento, porque as
+                    moléculas ficam em agitação, algumas mais do que as outras.
+                </p>
+                <p>
+                    Quanto mais as moléculas se movimentam, maior a sua desordem e, por consequência, a sua entropia
+                    também aumenta.
+                </p>
+                <p>
+                    O que a entropia se dispõe a calcular é: qual a quantidade de energia que não pode mais ser
+                    convertida em trabalho? Em quais variações termodinâmicas e em que temperatura?
+                </p>
+                <p>
+                    De acordo com a Segunda lei da Termodinâmica, o trabalho mecânico é convertido em calor. Em seguida,
+                    o trabalho passa para a forma de energia térmica. Só que nem toda a energia térmica é utilizada. Boa
+                    parte dela é perdida no meio. Bom seria se não houvesse perda de energia, mas isso não é possível. A
+                    energia térmica não pode ser transformada novamente em trabalho. O processo de entropia é
+                    irreversível.
+                </p>
+                <p>
+                    Logo, a entropia é medida de acordo com essa energia térmica que não pode ser aproveitada. A
+                    entropia é igual a quantidade de energia térmica que em determinada temperatura não consegue
+                    realizar trabalho.
+                </p>
+            </ul>
+            <p>
+                O que esse postulado apresenta é: toda vez que um sistema estiver próximo do zero absoluto (“0” na
+                escala Kelvin e “-273.75” em graus Celsius) a entropia dele será constante ou igual a zero.
+            </p>
+            <p>
+                A fórmula da Terceira lei da Termodinâmica proposta por Walther Nernst ficou assim:
+            </p>
+            <p>
+                <strong>lim = 0 ∆S =0</strong>
+            </p>
+            <p>
+                <strong>T = 0</strong>
+            </p>
+            <p>
+                Em que:
+            </p>
+            <p>
+                <strong>∆S = variação da entropia</strong>
+            </p>
+            <p>
+                <strong>T = temperatura</strong>
+            </p>
+            <p>
+                No início das suas pesquisas, Nernst afirmava que essa entropia poderia ser provada se fossem utilizados
+                cristais perfeitos, mas depois concluiu que essa temperatura (zero absoluto) não existia.
+            </p>
+            <p>
+                No entanto, as pesquisas não pararam. Muito tempo depois, outros pesquisadores acabaram descobrindo que
+                o zero absoluto poderia ser encontrado apenas nos gases. Nenhuma substância sólida ou líquida
+                conseguiria chegar a essa temperatura.
+            </p>
+            <ul>
+                <li>Terceira Lei: história</li>
+                <img src="imagens/artigo001/walther.jpg" alt="Walther Hermann Nernst" style="float: right; margin: 10px;">
+                <p>
+                    A Terceira lei da Termodinâmica foi elaborada por Walther Hermann Nernst, um físico-químico alemão.
+                    Além dos estudos na área da termodinâmica, desenvolveu pesquisas nos campos da eletroquímica e
+                    fotoquímica. Por causa do seu trabalho, a físico-química moderna teve grande avanço.
+                </p>
+                <p>
+                    Entre 1906 e 1912, Hermann elaborou o teorema do calor ou Terceira Lei da Termodinâmica.
+                </p>
+                <p>
+                    De acordo com o proposto pelo físico, sempre que um sistema estiver próximo da temperatura do zero
+                    absoluto ( -273.15 graus Celsius) a entropia terá um valor mínimo. A lei oferecia, portanto, um
+                    ponto de partida para determinar o valor da entropia.
+                </p>
+            </ul>
 
         </div>
-        <a href="#btnMenu">
+        <a href="#menu">
             <div class="btnAbove material-symbols-outlined">
                 arrow_upward
             </div>
