arrumei as imagens

--- a/artigo001.html
+++ b/artigo001.html
@@ -153,7 +153,7 @@
                 <img class="imagens" src="imagens/artigo001/lei-0.png" alt="Lei 0">
 
                 <h4>Lei do 0: história</h4>
-                <img src="imagens/artigo001/ralph.jpg" alt="Ralph H. Flower" style="float: right; margin: 10px;">
+                <img src="imagens/artigo001/ralph.jpg" alt="Ralph H. Flower" class="float">
                 <p>
                     A lei zero da termodinâmica ganhou esta denominação por causa de Ralph H. Fowler (1889- 1944), um
                     físico inglês. Após estudos e experiências, chegou ao postulado no século XX.
@@ -403,7 +403,7 @@
             </p>
             <ul>
                 <li>Terceira Lei: história</li>
-                <img src="imagens/artigo001/walther.jpg" alt="Walther Hermann Nernst" style="float: right; margin: 10px;">
+                <img src="imagens/artigo001/walther.jpg" alt="Walther Hermann Nernst" class="float">
                 <p>
                     A Terceira lei da Termodinâmica foi elaborada por Walther Hermann Nernst, um físico-químico alemão.
                     Além dos estudos na área da termodinâmica, desenvolveu pesquisas nos campos da eletroquímica e
