--- a/artigo002.html
+++ b/artigo002.html
@@ -50,7 +50,7 @@
                     <li><a href="#3-lei">Lei de Charles</a></li>
                 </ul>
             </div>
-            <h3 id="#conceito">Conceito de gás perfeito</h3>
+            <h3 id="conceito">Conceito de gás perfeito</h3>
             <p>
                 Gás ideal ou gás perfeito é um modelo teórico em que um grande número de partículas diminutas movem-se com diferentes velocidades, podendo sofrer apenas colisões perfeitamente elásticas entre si. O conceito de gás ideal é útil para o estudo dos gases, uma vez que grande parte dos gases reais se comporta como gases ideais quando submetidos a regimes de baixas pressões e altas temperaturas.  
             </p>
